Integração com Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.clean-disabled=false
 spring.flyway.clean-on-validation-error=true
 spring.flyway.validate-on-migrate=false
+
+springdoc.override-with-generic-response=false
+
