--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configuração do PostgreSQL
+# Configuracao do PostgreSQL
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -8,6 +8,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.generate_statistics=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
 # Jackson configuration
 spring.jackson.serialization.fail-on-empty-beans=false
@@ -22,5 +27,12 @@ spring.flyway.validate-on-migrate=false
 
 springdoc.override-with-generic-response=false
 
+# JWT AUTH
 jwt.secret=${JWT_SECRET}
 
+# Redis host
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.type=redis
+logging.level.org.springframework.cache=DEBUG
+logging.level.org.springframework.cache.interceptor.CacheInterceptor=TRACE
